Clean up and fix layout problem

--- a/src/Workspace/Workspace.css
+++ b/src/Workspace/Workspace.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: #eee;
 }
